# mnemebrain-lite

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  run_bmb_benchmark.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  pylint.yml  release.yml
docs/: architecture.md  benchmark.md  design.md  integration-api.md
src/mnemebrain/: __main__.py  engine.py  memory.py  models.py  store.py
src/mnemebrain/api/: app.py  routes.py
src/mnemebrain/providers/: base.py
src/mnemebrain/providers/embeddings/: sentence_transformers.py
src/mnemebrain_core/: __init__.py  __main__.py  engine.py  memory.py  models.py  store.py  triple_relations.py  working_memory.py
src/mnemebrain_core/api/: app.py  routes.py  schemas.py
src/mnemebrain_core/benchmark/: BMB_REPORT.md  README.md  bmb_cli.py  interface.py  scoring.py  system_report.py  system_runner.py
src/mnemebrain_core/benchmark/adapters/: langchain_buffer.py  naive_baseline.py  rag_baseline.py  structured_memory.py
src/mnemebrain_core/benchmark/scenarios/: loader.py  schema.py
src/mnemebrain_core/benchmark/scenarios/data/: bmb_scenarios.json
src/mnemebrain_core/providers/: base.py
src/mnemebrain_core/providers/embeddings/: openai.py  openai_compatible.py  sentence_transformers.py
tests/e2e/: test_api.py
tests/integration/: test_memory.py
tests/unit/: test_app.py  test_engine.py  test_init.py  test_main.py  test_memory.py  test_models.py  test_providers.py  test_routes.py  test_store.py  test_triple_relations.py  test_working_memory.py
