[project]
name = "mnemebrain-lite"
version = "0.1.0"
description = "Give your AI a real brain - Agents today store text. MnemeBrain stores beliefs with evidence, confidence, provenance, and revision logic."
readme = "README.md"
license = "MIT"
authors = [
    { name = "mnemebrain", email = "hello@mnemebrain.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "kuzu>=0.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sentence-transformers>=3.0,<4.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemebrain_core"]

[tool.uv]
override-dependencies = ["torch>=2.1,<2.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring Kuzu DB and embeddings",
    "e2e: marks end-to-end API tests",
]
