[project]
name = "mnemebrain-lite"
version = "1.0.0a1"
description = "Give your AI a real brain - Agents today store text. MnemeBrain stores beliefs with evidence, confidence, provenance, and revision logic."
readme = "README.md"
license = "MIT"
authors = [
    { name = "mnemebrain", email = "hello@mnemebrain.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "kuzu>=0.8",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
embeddings = [
    "sentence-transformers>=3.0,<4.0",
]
all = [
    "mnemebrain-lite[api]",
    "mnemebrain-lite[embeddings]",
]
dev = [
    "mnemebrain-lite[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemebrain_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring Kuzu DB and embeddings",
    "e2e: marks end-to-end API tests",
]
